# nbcelltests

./: .bumpversion.cfg  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  Untitled.ipynb  azure-pipelines.yml  jest.config.js  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.py.in  tsconfig.json
.azure/: default-job.yml  dev-template.yml  pipelines.yml  template.yml  test-template.yml
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: Makefile  api.md  conf.py  conf.py.in  index.rst  make.bat
examples/: Example.ipynb
js/: .eslintrc.js  babel.config.js  jest.config.js  package.json  tsconfig.json
js/src/: activate.js  activate.ts  index.js  index.ts  run.js  run.ts  tool.js  tool.ts  utils.js  utils.ts  widget.js  widget.ts
js/style/: index.css  index.js
js/tests/: activate.test.js  activate.test.ts  export.test.js  fileMock.js  setup.js  styleMock.js
jupyter-config/: nbcelltests.json
jupyter-config/jupyter_notebook_config.d/: jupyterlab_celltests.json  nbcelltests.json
jupyterlab_celltests/: __init__.py  _version.py  define.py  extension.py  lint.py  shared.py  tests.py
jupyterlab_celltests/tests/: basic.ipynb  test_init.py  test_lint.py
nbcelltests/: __init__.py  __main__.py  _version.py  define.py  extension.py  lint.py  shared.py  test.py  tests_vendored.py
nbcelltests/extension/: install.json
nbcelltests/labextension/: package.json
nbcelltests/labextension/static/: 509.19fd0eaa655aca8fb657.js  remoteEntry.23ad066dcafea34b1db5.js  third-party-licenses.json
nbcelltests/lint/: __init__.py  rules.py
nbcelltests/tests/: __init__.py  _broken_magics.ipynb  _cell_counting.ipynb  _cell_coverage.ipynb  _cell_error.ipynb  _cell_not_injected_or_mocked.ipynb  _cumulative_run.ipynb  _empty_cell_with_test.ipynb  _emptyast_cell_with_test.ipynb  _input_cell_multiline_string.ipynb  _input_cell_newline_string.ipynb  _input_test_injection_comment.ipynb  _input_test_multiline_string.ipynb  _input_test_newline_string.ipynb  _kernel_check.ipynb  _kernel_check1.ipynb  _kernel_cwd.ipynb  _lint_disable.ipynb  _lint_disable_empty_cell.ipynb  _no_code_cells.ipynb  _non_code_cell.ipynb  _skips.ipynb  _test_error.ipynb  _test_fail.ipynb  basic.ipynb  magics.ipynb  more.ipynb  test_all.py  test_extension.py  test_init.py  test_lint.py  test_shared.py  test_test.py  test_tests.py
scripts/: deploy.py  deploy.sh
src/: activate.ts  index.ts  request.ts  run.ts  tool.ts  utils.ts  widget.ts
style/: index.css
tests/: basic.ipynb  magics.ipynb  more.ipynb  test_all.py  test_extension.py  test_init.py  test_lint.py  test_shared.py  test_tests.py
